--- a/ms-nodejs-insource/developers-portfolio/package.json
+++ b/ms-nodejs-insource/developers-portfolio/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bunyan": "^1.8.12",
+    "crypto": "^1.0.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
